* x86-64-tdep.c (x86_64_push_dummy_call): Adjust for changed function signature.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,8 @@
 2003-05-31  Mark Kettenis  <kettenis@gnu.org>
 
+	* x86-64-tdep.c (x86_64_push_dummy_call): Adjust for changed
+	function signature.
+
 	* i386-tdep.c (i386_sigtramp_frame_p): Only handle frames if we
 	have a sigcontext_addr handler.
 	* x86-64-tdep.c (x86_64_sigtramp_frame_p): Assert that we have a
