--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-31  Andreas Jaeger  <aj@suse.de>
+
+	* x86-64-linux-nat.c: Fix comment.
+
 2003-05-31  Mark Kettenis  <kettenis@gnu.org>
 
 	* x86-64-tdep.c (x86_64_push_dummy_call): Adjust for changed
