--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,11 @@
+2003-05-31  Mark Kettenis  <kettenis@gnu.org>
+
+	* dwarf2-frame.c, dwarf2-frame.h: New files.
+	* Makefile.in (SFILES): Add dwarf2-frame.c.
+	(dwarf2_frame_h): Define.
+	(COMMON_OBS): Add dwarf2-frame.o.
+	(dwarf2-frame.o): Add dependencies.
+
 2003-05-31  Andreas Jaeger  <aj@suse.de>
 
 	* x86-64-linux-nat.c: Fix comment.
