* alpha-linux-tdep.c (alpha_linux_init_abi): Install dwarf2 unwinder.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-01  Richard Henderson  <rth@redhat.com>
+
+	* alpha-linux-tdep.c (alpha_linux_init_abi): Install dwarf2 unwinder.
+
 2003-06-01  Andrew Cagney  <cagney@redhat.com>
 
 	* mips-tdep.c (is_mips16_addr): New function.
