--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-01  Richard Henderson  <rth@redhat.com>
+
+	* alpha-tdep.c (alpha_push_dummy_call): Store sp.  Tidy copies
+	from arg_reg_buffer to regcache to avoid double conversion.
+
 2003-06-01  Mark Kettenis  <kettenis@gnu.org>
 
 	* i386-linux-nat.c (child_resume): Use I386_ESP_REGNUM instead of
