--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,15 @@
+2003-06-01  Andrew Cagney  <cagney@redhat.com>
+
+	* infcall.c (call_function_by_hand): Update comment on
+	DEPRECATED_DUMMY_WRITE_SP.
+
+	* mips-tdep.c (mips_gdbarch_init): Do not set
+	deprecated_dummy_write_sp.
+	(mips_eabi_push_dummy_call): Set the SP register.
+	(mips_o64_push_dummy_call): Set the SP register.
+	(mips_o32_push_dummy_call): Set the SP register.
+	(mips_n32n64_push_dummy_call): Set the SP register.
+
 2003-06-01  Richard Henderson  <rth@redhat.com>
 
         * alpha-nat.c (fetch_osf_core_registers): Use ALPHA_REGISTER_SIZE
